회원 정보 수정: YoonJun Kim 이름을 YunJun Kim으로 변경 및 출판물에 수상 정보 추가 스타일 수정: 수상 정보를 표시하기 위한 CSS 클래스 추가 아이콘 파일 업데이트 및 불필요한 파일 삭제

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -93,7 +93,7 @@
   github:
 
 - name:
-    en: YoonJun Kim
+    en: YunJun Kim
     ko: 김윤준
   type: intern
   youtube: https://www.youtube.com/@%EB%96%A8%EC%96%B4%EC%A7%80%EB%8A%94%EB%84%88%EC%9D%98%EB%AA%A8%EC%8A%B5
