--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -290,6 +290,7 @@
     - 이가현
     - 홍세원
     - 박하명
+  award: "학부생부분 장려상"
   links:
     paper: "/assets/papers/ksc2025_time_series.pdf"
     poster: "/assets/papers/ksc2025_time_series_poster.pdf"
@@ -307,6 +308,7 @@
     - 이가현
     - 홍세원
     - 박하명
+  award: "학부생부분 우수상"
   links:
     paper: "/assets/papers/ksc2025_multimodal.pdf"
     poster: "/assets/papers/ksc2025_multimodal_poster.pdf"
