회원 정보 업데이트: Sunwoo Park의 이미지 추가 및 YunJun Kim의 이미지와 이메일 추가

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -78,7 +78,7 @@
     en: Sunwoo Park
     ko: 박선우
   type: under
-  image: 
+  image: swpark.png
   email: shark820@kookmin.ac.kr
   homepage:
   github:
@@ -96,6 +96,8 @@
     en: YunJun Kim
     ko: 김윤준
   type: intern
+  image: yunjun_kim.jpg
+  email: yunjun0914@naver.com
   youtube: https://www.youtube.com/@%EB%96%A8%EC%96%B4%EC%A7%80%EB%8A%94%EB%84%88%EC%9D%98%EB%AA%A8%EC%8A%B5
 
 
