--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,9 @@ jobs:
           ruby-version: '3.1' # Jekyll 버전에 맞는 Ruby 버전을 명시
           bundler-cache: true # Gem 의존성 캐싱으로 빌드 속도 향상
 
+      - name: Install Dependencies
+        run: sudo apt-get update && sudo apt-get install -y imagemagick
+
       # Jekyll 사이트 빌드 (이 과정에서 jekyll-minifier가 이미지를 압축!)
       - name: Build the site
         env:
