--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Dependencies
-        run: sudo apt update && sudo apt install -y imagemagick
+        run: sudo apt update && sudo apt install -y imagemagick libmagickwand-dev
 
       # Ruby와 Bundler 설치
       - name: Setup Ruby
