--- a/_config.yml
+++ b/_config.yml
@@ -96,8 +96,8 @@ chart: # false (default), true
 
 ## => Paginate
 ##############################
-paginate: 8
-paginate_path: /page:num # don't change this unless for special need
+# paginate: 8
+# paginate_path: /page:num # don't change this unless for special need
 
 
 ## => Sources
@@ -220,10 +220,10 @@ defaults:
 ##############################
 plugins:
   - jekyll-feed
-  - jekyll-paginate
   - jekyll-sitemap
   - jemoji
   - jekyll-responsive-image
+  # - jekyll-paginate
 
 
 # Responsive Image 플러그인 설정
