navigation.yml에 연구 페이지 추가 및 research.md 파일 생성

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,10 @@ header:
     url : / 
 
   - titles:
+      en      : &EN      Research
+    url : /research/
+
+  - titles:
       en      : &EN      Members
     url : /members/
 
