Ahyoung Cho의 이미지 및 이메일 정보 업데이트

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -87,8 +87,8 @@
     en: Ahyoung Cho
     ko: 조아영
   type: under
-  image: 
-  email: shark820@kookmin.ac.kr
+  image: aycho.jpg
+  email: twnbay@kookmin.ac.kr
   homepage:
   github:
 
